moved to java 17 & fixed tests